--- a/package.json
+++ b/package.json
@@ -4,9 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel ./ -d dist/",
+    "prepublish": "npm run build",
+    "flow": "flow",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-flow": "^7.8.3",
+    "eslint": "^6.8.0",
+    "flow-bin": "^0.120.1",
+    "nodemon": "^2.0.2",
+    "prettier": "1.19.1"
+  }
 }
