--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,6 @@
     "indent": ["error", "tab"],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
-    "semi": ["error", "always"],
+    "semi": ["error", "always"]
   }
 }
