--- a/.flowconfig
+++ b/.flowconfig
@@ -8,5 +8,14 @@
 [lints]
 
 [options]
+all=true
+
+[untyped]
+.*/node_modules/*
 
 [strict]
+nonstrict-import
+unclear-type
+unsafe-getters-setters
+untyped-import
+untyped-type-import
