--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel ./ -d dist/",
     "prepublish": "npm run build",
     "flow": "flow",
-    "start": "nodemon index",
+    "start:dev": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
